--- a/articles.html
+++ b/articles.html
@@ -56,6 +56,8 @@
                     <a
                         href="https://www.mayoclinic.org/diseases-conditions/diabetes/in-depth/diabetes-diet/art-20044295">[1]source.</a>
                 </p>
+                <img src="img/heart.jpg" alt="heart"> 
+
             </details>
             <details class="article">
                 <summary>
@@ -83,7 +85,7 @@
                     For most people with type 2 diabetes, weight loss also can make it easier to control blood glucose
                     and offers a host of other health benefits. If you need to lose weight, a diabetes diet provides a
                     well-organized, nutritious way to reach your goal safely.</p>
-
+<img src="img/diabtes1.jpeg" alt="diabetes">
                 <h5>What does a diabetes diet involve?</h5>
 
                 <p>A diabetes diet is based on eating three meals a day at regular times. This helps you better use the
@@ -118,6 +120,7 @@
                     Breast milk is delivered in a biodegradable “organic package”, so mom doesn’t need to use as much
                     plastic packaging (since tiny humans easily absorb plastic-contained endocrine disruptors).
                     <a href="https://www.precisionnutrition.com/all-about-infant-nutrition">[2]source.</a>
+                    <img src="img/baby1.jpeg" alt="baby1">
                 </p>
             </details>
             <details class="article">
@@ -141,7 +144,7 @@
                     supplements.
                     Protein and carbohydrates. They provide energy and fuel growth.
                     Zinc. Helps the cells grow and repair themselves</p>
-
+<img src="img/baby3.jpeg" alt="baby3">
                 <h5>Your baby also needs vitamins such as:</h5>
                 <p>
                 <ul>
@@ -175,6 +178,7 @@
                     have enough iron, vitamin E, and essential fatty acids for your baby. Also, it contains too much
                     protein, sodium, and potassium for your child's body to absorb and can cause harm. Wait to introduce
                     cow's milk until your baby is 1-year-old.</p>
+                    <img src="img/baby4.jpeg" alt="baby4">
             </details>
         </section>
         <section id="diet">
@@ -198,6 +202,7 @@
                     By using these simple tips, you can cut through the confusion and learn how to create—and stick to—a
                     tasty, varied, and nutritious diet that is as good for your mind as it is for your body.
                 </p>
+                <img src="img/art4.jpeg" alt="diet-first-img">
             </details>
             <details class="article">
                 <summary>
@@ -239,6 +244,7 @@
                     on white bread, pastries, starches, and sugar can prevent rapid spikes in blood sugar, fluctuations
                     in mood and energy, and a build-up of fat, especially around your waistline.
                 </p>
+                <img src="img/art5.jpeg" alt="diet-sec-img">
             </details>
             <details class="article">
                 <summary>
@@ -249,7 +255,9 @@
                     Avoid eating late at night. Try to eat dinner earlier and fast for 14-16 hours until breakfast the
                     next morning. Studies suggest that eating only when you’re most active and giving your digestive
                     system a long break each day may help to regulate weight.
+                   
                 </p>
+                <img src="img/diet3.jpg" alt="diet-third-img">
             </details>
         </section>
     </main>
