--- a/articles.html
+++ b/articles.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <div class="img-container-header">
-        <a href="index.html"><img class="logo" src="assets/logo.png" alt=""></a>
-    </div>
+            <a href="index.html"><img class="logo" src="assets/logo.png" alt=""></a>
+        </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="index.html#Art">Articles</a>
@@ -56,7 +56,7 @@
                     <a
                         href="https://www.mayoclinic.org/diseases-conditions/diabetes/in-depth/diabetes-diet/art-20044295">[1]source.</a>
                 </p>
-                <img src="img/heart.jpg" alt="heart"> 
+                <img src="img/heart.jpg" alt="heart">
 
             </details>
             <details class="article">
@@ -85,7 +85,7 @@
                     For most people with type 2 diabetes, weight loss also can make it easier to control blood glucose
                     and offers a host of other health benefits. If you need to lose weight, a diabetes diet provides a
                     well-organized, nutritious way to reach your goal safely.</p>
-<img src="img/diabtes1.jpeg" alt="diabetes">
+                <img src="img/diabtes1.jpeg" alt="diabetes">
                 <h5>What does a diabetes diet involve?</h5>
 
                 <p>A diabetes diet is based on eating three meals a day at regular times. This helps you better use the
@@ -144,7 +144,7 @@
                     supplements.
                     Protein and carbohydrates. They provide energy and fuel growth.
                     Zinc. Helps the cells grow and repair themselves</p>
-<img src="img/baby3.jpeg" alt="baby3">
+                <img src="img/baby3.jpeg" alt="baby3">
                 <h5>Your baby also needs vitamins such as:</h5>
                 <p>
                 <ul>
@@ -165,8 +165,8 @@
                     <li> Vitamin E. Protects cells from damage, and strengthens the immune system.</li>
                     <li>
                         Vitamin K. Helps the blood to clot.</li>
-                    <a href="https://www.webmd.com/parenting/baby/nutrition#2-6">[3]source.</a>
                 </ul>
+                <a href="https://www.webmd.com/parenting/baby/nutrition#2-6">[3]source.</a>
                 </p>
 
             </details>
@@ -178,7 +178,7 @@
                     have enough iron, vitamin E, and essential fatty acids for your baby. Also, it contains too much
                     protein, sodium, and potassium for your child's body to absorb and can cause harm. Wait to introduce
                     cow's milk until your baby is 1-year-old.</p>
-                    <img src="img/baby4.jpeg" alt="baby4">
+                <img src="img/baby4.jpeg" alt="baby4">
             </details>
         </section>
         <section id="diet">
@@ -255,7 +255,7 @@
                     Avoid eating late at night. Try to eat dinner earlier and fast for 14-16 hours until breakfast the
                     next morning. Studies suggest that eating only when you’re most active and giving your digestive
                     system a long break each day may help to regulate weight.
-                   
+
                 </p>
                 <img src="img/diet3.jpg" alt="diet-third-img">
             </details>
@@ -264,7 +264,7 @@
     <footer>
         copy rights 2021
     </footer>
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script> -->
 </body>
 
 </html>
