--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 <html lang="en">
 
 <head>
-
-
-  <link rel="stylesheet" href="css/scrollEffect.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/Cards.css">
-    <link rel="stylesheet" href="css/qouteCss.css">
-    <link rel="stylesheet" href="css/contact-form.css">
-    <link rel="stylesheet" href="css/style.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/Cards.css">
+  <link rel="stylesheet" href="css/qouteCss.css">
+  <link rel="stylesheet" href="css/contact-form.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body onload="preLoad()" id="myPage">
@@ -39,12 +35,16 @@
             versions of Lorem Ipsum.</p>
           <a href="">Calculate Your BMI</a>
         </div>
+      </div>
+    </div>
+    <div class="main-container">
+
+      <div class="articles-container">
 
 
         <div id="Art">
           <h3>Articles</h3>
         </div>
-        <div class="effected">
         <div class="card">
           <div class="card-image">
             <img class="activator" src="img/chronic.jpeg">
@@ -56,7 +56,6 @@
             </span>
             <p><a href="articles.html#chronic">Read more</a></p>
           </div>
-
         </div>
 
 
@@ -91,7 +90,7 @@
       </div>
 
 
-</div>
+
 
 
 
@@ -158,16 +157,13 @@
 
 
     </div>
-
-    </main>
-    <footer>
-        <div class="copy-rights">MAASH 2021 All Rights Reserved</div>
-        <div class="footer-link"><a href="#"><i class="fab fa-github"></i></a></div>
-    </footer>
-    <script src="js/slider.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/ScrollEffect.js"></script>
-
+  </main>
+  <footer>
+    <div class="copy-rights">MAASH 2021 All Rights Reserved</div>
+    <div class="footer-link"><a href="#"><i class="fab fa-github"></i></a></div>
+  </footer>
+  <script src="js/slider.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
