--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+ <link rel="stylesheet" href="css/scrollEffect.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/Cards.css">
   <link rel="stylesheet" href="css/qouteCss.css">
@@ -45,6 +46,7 @@
         <div id="Art">
           <h3>Articles</h3>
         </div>
+        <div class="effected">
         <div class="card">
           <div class="card-image">
             <img class="activator" src="img/chronic.jpeg">
@@ -64,7 +66,7 @@
             <img class="activator" src="img/baby.jpg">
           </div>
           <div class="card-content">
-            <span class="card-title">Healthy Eating For babies<i class="material-icons right"></i></span>
+            <span class="card-title">Babies Health <i class="material-icons right"></i></span>
             <span class="card-container-text">Learn more about your children health, how to feed them properly, and
               making sure that you’re providing them with the nutritions they need to live a happy and healthy
               life.</span>
@@ -86,7 +88,7 @@
             <p><a href="articles.html#diet">Read more</a></p>
           </div>
         </div>
-
+      </div>
       </div>
 
 
@@ -145,6 +147,7 @@
       <a href="#"><i class="social-icon fab fa-twitter"></i></a>
     </div>
   </footer>
+  <script src="js/ScrollingFunc"></script>
   <script src="js/slider.js"></script>
   <script src="js/app.js"></script>
   <script src="js/ScrollEffect.js"></script>
