--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <div id="Art">
         <h3>Qoutes</h3>
       </div>
+      <div class="effected">
       <div class="container">
 
         <div class="box">
@@ -116,12 +117,13 @@
         </div>
       </div>
     </div>
-
+</div>
     <div id="contact">
       <h3>Contact us</h3>
     </div>
-
+  <div class="effected">
     <div class="contact-container">
+
       <form>
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -138,7 +140,7 @@
           </div>
         </div>
     </div>
-
+  </div>
   </main>
   <footer>
     <div class="copy-rights">MAASH 2021 All Rights Reserved</div>
@@ -147,10 +149,10 @@
       <a href="#"><i class="social-icon fab fa-twitter"></i></a>
     </div>
   </footer>
-  <script src="js/ScrollingFunc"></script>
+  <script src="js/ScrollingFunc.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/ScrollEffect.js"></script>
+
 </body>
 
 </html>
