finish the form

--- a/form.html
+++ b/form.html
@@ -98,6 +98,8 @@
                 <div id="Children" class="tabcontent">
                     <h1>Enter Your Information</h1>
                     <form id="children-form">
+                        <label for="name">Name</label>
+                        <input class="input1" type="text" id="name" value=""><br>
                         <label for="Age">Age</label><br>
                         <select name="Age" id="AgeChildren">
                             <option value="1">4 Months- 1 Year</option>
