--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h1>Health and Care</h1>
           <p>Lorlishing software like Aldus PageMaker including versions of Lorem Ipsum.ing versions of Lorem Ipsum. ing
             versions of Lorem Ipsum.</p>
-          <a href="">Calculate Your BMI</a>
+          <a href="form.html">Calculate Your BMI</a>
         </div>
       </div>
     </div>
